--- a/제 3장 변수와 연산자.md
+++ b/제 3장 변수와 연산자.md
@@ -1,4 +1,4 @@
-<제 3장> 변수와 연산자
+### <제 3장> 변수와 연산자
 
 - 변수란?
 
@@ -71,4 +71,280 @@
   2. 기타 대입 연산자(+=， -=, *=, /=, %=) 
 
      - `a = a+b;` => `a += b;`
+     
+  3. 증가, 감소 연산자
 
+     - `++a`, `--a` 값을 변경 후 연산 
+     - `a++`, `a--` 연산 후 값을 변경
+     - `val2 = (val(10)--)+2` 일때, `val2 = 12`
+
+  4. 관계 연산자
+
+     - 변수를 두고 크고 작은지를 비교해주는 연산자
+     - 관계 연산자를 실행하면 true(1)/false(0) 두 가지 값
+
+  5. 논리 연산자(&&, ||, !)
+
+     - `&&` : 피연산자가 모두 참이면 참(and)
+     - `||`: 피연산자 중 하나라도 참이면 참(or)
+     - `!`: true면 false, false면 true(not의 의미)
+       -  `컴퓨터는 0 아닌 모든 값을 true로 인식한다`
+       - val = 0 이면 !val = true?
+
+  6. 비트 단위 연산자
+
+     - 0과 1의 단위로 연산을 할 때 사용하는 연산자
+
+  7. 콤마 연산자
+
+     - 둘 이상의 변수를 동시에 선언할 때
+     - 순서대로 실행되어야 할 둘 이상의 문장을 한 줄에 선언할 때.
+     - 둘 이상의 인자를 함수로 전달할 때
+
+- 연산자들의 우선순위와 결합성
+
+  - 우선순위 : 덧셈보다 곱셈, 뺄셈보다 나눗셈이 먼저
+  - 결합성 : 우선순위가 같은 연산자가 둘 이상 있을 때 무엇부터연산을 해야 하는가.
+
+
+
+- `scanf`
+
+  - 키보드로부터 변수의 값을 입력받는 것.
+
+  - ``````c
+    int main(void)
+    {
+    	int val;
+    	scanf("%d", &val)
+    }
+    ``````
+
+  - 데이터의 종류에 맞게 메모리 공간 할당
+
+  - val 이름의 변수 선언
+
+  - scanf 함수 호출, 두번쨰 전달인자로 val을 넘겨줌
+
+  - 서식 문자 사용 => 데이터를 10진수 정수형(%d)로 입력받으라
+
+  - 다양한 형태로 입력을 받을 수 있음.
+
+  - `scanf("%d %d %d", &a, &b, &c);`
+
+  - 데이터의 경계를 공백으로 구분
+
+
+
+- 연습문제 3-1
+
+  - 문제1
+
+    ```c
+    #include<stdio.h>
+    
+    int main(void){
+    	int val1, val2;
+    	printf("두 개의 정수를 입력하시오");
+    	scanf("%d %d", &val, &val2);
+    
+    	
+    	printf("뺄셈 결과 : %d-%d = %d", val1, val2, val1-val2);
+    	printf("곱셈 결과 : %dX%d = %d", val1, val2, val1*val2);
+    }
+    ```
+
+  - 문제2
+
+    ```c
+    #include<stdio.h>
+    
+    int main(void){
+    	int val1, val2, val3;
+    	printf("세 개의 정수를 입력하시오");
+    	scanf("%d %d %d", &val, &val2, &val3);
+    	result = val1*val2+val3
+    	
+    	printf("%d*%d+%d = %d", val1, val2, val3, result);
+    }
+  ```
+  
+- 문제3 
+  
+    ```c
+    #include<stdio.h>
+    
+    int main(void){
+    	int val1;
+    	printf("정수를 입력하시오");
+    	scanf("%d", &val);
+    	
+    	printf("%d", val1*val1);
+    }
+    ```
+    
+  - 문제4
+  
+    ```c
+    #include<stdio.h>
+    
+    int main(void){
+    	int val1, val2;
+    	printf("두 개의 정수를 입력하시오");
+    	scanf("%d %d", &val1, &val2);
+    	
+    	printf("%d", val1%val2);
+    }
+    ```
+  
+  - 문제5
+  
+    ```c
+    #include<stdio.h>
+    
+    int main(void){
+    	int val1, val2, val3;
+    	printf("세 개의 정수를 입력하시오");
+    	scanf("%d %d %d", &val, &val2, &val3);
+    	int a = val1-val2;
+    	int b = val2+val3;
+    	int c = val3%val1;
+    	
+    	printf("%d",a*b*c);
+    }
+    ```
+
+
+
+- C 언어의 키워드들
+  - 키워드는 변수나 함수의 이름으로 사용할 수 없다.
+
+
+
+### <4장. 데이터 표현 방식의 이해>
+
+- n진수 :  데이터를 표현하는데 있어서 n개의 숫자를 쓰겠다!
+- 연습문제 4-1
+  - 문제1
+  - 8 (1000, 8)
+  - 9(1001,9)
+  - 10(1010,a)
+  - 11(1011,b)
+  - 12(1100,c)
+  - 13(1101,d)
+  - 14(1110,e)
+  - 15(1111,f)
+  - 16(10000,10)
+  - 17(10001,11)
+  - 18(10010,12)
+  - 19(10011,13)
+  - 20(10100,14)
+
+
+
+- - 문제2
+  - 5(5)
+  - 6(6)
+  - 7(7)
+  - 8(10)
+  - 9(11)
+  - 10(12)
+  - 11(13)
+  - 12(14)
+  - 13(15)
+  - 14(16)
+  - 15(17)
+  - 16(20)
+  - 17(21)
+  - 18(22)
+- 비트(bit)와 바이트(byte)
+  - 비트 8개 = 바이트
+
+
+
+- - 연습문제 4-2
+  - 문제1
+  - n 비트로 표현할 수 있는 데이터는 2의 n승
+    - 4비트
+    - (0000,1000, 1001, 1010, 1100, 1011, 1110, 1111) 8가지
+    - 1바이트(8비트)
+    - 2의 8승 = 256가지
+    - 4바이트(32비트)
+    - 2의 32승
+  - 문제2 
+    - 0, 1, 2, 4, 8, 16, 32, 64, 128
+  - 문제3
+    - 17, 162, 247
+
+
+
+- 8진수와 16진수로 데이터 표현하기
+  - 16진수 : 0x...
+  - 8진수 : 0....
+
+
+
+- 정수와 실수의 표현 방식
+  - 1바이트로 정수를 표현?
+    - 8자리 중 첫번째 자리 : 부호(+-) 
+      - 양수 : 0 / 음수 : 1
+      - MSB(Most Significant Bit)
+    - 나머지 7개 자리 : 데이터의 크기 표현
+  - 음수를 표현할 때는 2의 보수 체계를 기억
+    - 양의 수 표현방식(00000101)이라면
+    - 거꾸로(11111010)으로 숫자.
+    - 그리고 1을 더해준다
+    - 11111011(그럼 음수 완성~)
+- 연습문제 4-2
+  - 문제1. 
+    - 01001111 : 79
+    - 00110011 : 51
+  - 문제2.
+    - 10101001: -41
+    - 11110000: -112
+
+
+
+- 실수의 표현 방식
+  - + (1.m) x 2e- 127 
+    + 부동소수점 방식, 부동소수점 오차 존재
+    + 서식문자 : %f
+
+
+
+- 비트 단위 연산
+  - 비트 단위 연산자
+    - `&` : and
+    - `|` : or
+    - `^` : xor
+    - `~` : not
+    - `<<` : 왼쪽으로 이동
+    - `>>` : 오른쪽으로 이동
+    - 비트 단위 연산을 진행하며, 대상은 반드시 정수
+    - 실수는 연산이 불가
+  - & : 두 개의 비트가 모두 1일 때 1을 반환
+  - | : 두 개의 비트 중 하나라도 1이면 1을 반환
+  - ^ : 두 개의 비트가 서로 다를 경우 1을 반환
+  - ~ : 비트를 반전(0이면 1 / 1이면 0)
+    - 부호 비트도 반전된다.
+  - `>>`, `<<` : 비트 이동(쉬프트 연산)
+    - a<<b : a의 비트를 b칸씩 왼쪽으로 이동
+      - 왼쪽 쉬프트 연산의 경우, 이동한 만큼 왼쪽의 비트는 버려짐
+      - 1비트씩 왼쪽으로 이동할 때마다 값이 두 배!
+    - a<<b : a의 비트를 b칸씩 오른쪽으로 이동
+      - 왼쪽 값을 채우는건 시스템에 따라 달라진다..?
+      - 음수일 경우, 1이 채워지지 않으면 문제가 됨
+
+
+
+- - 연습문제 4-4
+
+    - 문제1
+
+      ```
+      #include<stdio.h>
+      
+      
+      ```
+
+      
