--- a/제 3장 변수와 연산자.md
+++ b/제 3장 변수와 연산자.md
@@ -1,3 +1,7 @@
+
+
+
+
 ### <제 3장> 변수와 연산자
 
 - 변수란?
@@ -116,22 +120,23 @@
     int main(void)
     {
     	int val;
-    	scanf("%d", &val)
+    	scanf("%d", &val);
+        return0;
     }
-    ``````
-
-  - 데이터의 종류에 맞게 메모리 공간 할당
-
-  - val 이름의 변수 선언
-
-  - scanf 함수 호출, 두번쨰 전달인자로 val을 넘겨줌
-
-  - 서식 문자 사용 => 데이터를 10진수 정수형(%d)로 입력받으라
-
-  - 다양한 형태로 입력을 받을 수 있음.
-
-  - `scanf("%d %d %d", &a, &b, &c);`
-
+``````
+    
+- 데이터의 종류에 맞게 메모리 공간 할당
+  
+- val 이름의 변수 선언
+  
+- scanf 함수 호출, 두번쨰 전달인자로 val을 넘겨줌
+  
+- 서식 문자 사용 => 데이터를 10진수 정수형(%d)로 입력받으라
+  
+- 다양한 형태로 입력을 받을 수 있음.
+  
+- `scanf("%d %d %d", &a, &b, &c);`
+  
   - 데이터의 경계를 공백으로 구분
 
 
@@ -151,11 +156,12 @@
     	
     	printf("뺄셈 결과 : %d-%d = %d", val1, val2, val1-val2);
     	printf("곱셈 결과 : %dX%d = %d", val1, val2, val1*val2);
+        return0;
     }
-    ```
-
-  - 문제2
-
+  ```
+  
+- 문제2
+  
     ```c
     #include<stdio.h>
     
@@ -166,10 +172,11 @@
     	result = val1*val2+val3
     	
     	printf("%d*%d+%d = %d", val1, val2, val3, result);
+      return0;
     }
   ```
   
-- 문제3 
+  - 문제3 
   
     ```c
     #include<stdio.h>
@@ -180,6 +187,7 @@
     	scanf("%d", &val);
     	
     	printf("%d", val1*val1);
+        return0;
     }
     ```
     
@@ -194,6 +202,7 @@
     	scanf("%d %d", &val1, &val2);
     	
     	printf("%d", val1%val2);
+        return0;
     }
     ```
   
@@ -211,6 +220,7 @@
     	int c = val3%val1;
     	
     	printf("%d",a*b*c);
+        return0;
     }
     ```
 
@@ -341,10 +351,190 @@
 
     - 문제1
 
-      ```
+      ```c
       #include<stdio.h>
       
+      int main(void){
+      	int a;
+      	scanf("%d",a);
+      	a = ~a;
+      	a +=1;
+      	
+      	printf("%d", a);
+      	
+      	return0;
+      }
       
       ```
 
+    - 문제2
+
+      ```c
+      #include<stdio.h>
       
+      int main(void){
+      	int a;
+      	scanf("%d",a);
+      	a = a<<1;
+      
+      	
+      	printf("%d", a);
+      	
+      	return0;
+      }
+      ```
+
+      - 범위 제한.. 조건문.. 이해 못한 것 같다.
+
+
+
+### <5장. 상수와 기본 자료형>
+
+- 자료형(data type)
+
+  - 선언할 변수의 특징을 나타내기 위한 키워드
+  - 정수형(char, short, int, long)/실수형(float, double, long double)
+  - 다양한 자료형을 제공하는 이유?
+    1. 데이터의 표현 방식이 다르기 때문
+    2. 메모리 공간의 적절한 사용을 위해서
+
+- sizeof 연산자
+
+  - 단항 연산자. 
+
+  - 피연산자의 메모리 크기를 반환
+
+  - ```c
+    int main(void){ 
+    	int val=10; 
+        printf( “%d" , sizeof val);
+    	printf( “%d" , sizeof(int)); 
+     
+    // 변수 val의 메모리 크기 출력 
+    // 자료형 int의 메모리 크기 출력 
+    }
+    ```
+
+  - 피연산자에 자료형의 이름이 오면 반드시 **괄호**
+
+  - 괄호를 쓰지만 함수가 아니다~!
+
+
+
+- 컴퓨터는 내부적으로 int형 데이터를 가장 빠르게 연산
+- 실수형 데이터는 데이터의 범위보다 **정밀도**가 중요
+- 여기까지 오차없이 표현 가능!
+  - float : 소수 이하 6자리
+  - double : 소수 이하 15자리
+  - long double : double의 정밀도와 같거나 크다.
+  - double 입력 서식문자 : `%lf` 
+
+
+
+- `unsigned`
+
+  - 0보다 큰 값을 표현할 수 있는 범위를 두배로 뻥튀기 시켜주는 것
+  - ex) unsigned char : 범위(0~255)
+  - 부호를 표현하는데에 쓰이는 비트를 삭제, 
+  - 표현되는 모든 값을 양수로.
+  - 실수 자료형에는 붙일 수 없음
+
+- ASCII(American Standard Code of Information Interchange) 코드의 등장
+
+  - 미국 표준 협회(ANSI : American National Standards Institute)에 의해 숫자와 문자를 연결 시켜 
+
+  - 문자의 표현에 대한 약속
+
+  - 문자상수
+
+    - 프로그램 상에서 문자로 표현할 땐 반드시 따옴표로(' ') 로 감싸주어야 한다.
+
+    - ```c
+      char ch1 = 'A';
+      ```
+
+  - %c : 문자로 출력하겠다는 의미의 서식문자
+
+  - ASCII 코드의 범위 : 0~127
+
+    - 주로 char형 변수 사용 
+
+- 연습문제 5-1
+
+  - 문제1
+
+  - ```
+    #include<stdio.h>
+    
+    int main(void){
+    	
+    	int a, b, c, d;
+    	printf("첫 번째 좌표를 입력해주세요 : ");
+    	scanf("%d %d",a,b);
+    	printf("두 번째 좌표를 입력해주세요 : ");
+    	scanf("%d %d",c,d);
+    	
+    	int width : c-a;
+    	int height: d-b;
+    	
+    	printf("첫 번째포인트의 X， Y 좌표: %d %d", a, b);
+    	printf("두 번째포인트의 X， Y 좌표: %d %d", c, d);
+    	printf("넓이: %d", width*height);
+    	return 0;
+    }
+    ```
+
+  - 문제2
+
+  - ```c
+    #include<stdio.h>
+    
+    int main(void){
+    	double a, b;
+    	
+    	scanf("%lf %lf", a, b);
+    	printf("%lf", a+b);
+    	printf("%lf", a-b);
+    	printf("%lf", a*b);	
+    	printf("%lf", a%b);
+    	return 0;
+    }
+    ```
+
+  - 문제3
+
+    - 아스키 코드를 구성하는 값의 범위 : 0~255
+    - 1씩 증가
+    - 소문자가 더 크고, 32값씩 차이가 난다.
+
+  - 문제4
+
+  - ```c
+    #include<stdio.h>
+    
+    int main(void){
+    	unsigned char a;
+    	scanf("%d", a);
+    	printf("%c",a);
+    	return 0;
+    }
+    ```
+
+  - 문제5
+
+    ```c
+    #include<stdio.h>
+    
+    int main(void){
+    	char c;
+    	scanf("%c", c);
+    	printf("%d",c);
+    	return 0;
+    }
+    ```
+
+    
+
+- 상수에 대한 이해
+  1. 리터럴 상수(literal)
+  2. 
