--- a/제 3장 변수와 연산자.md
+++ b/제 3장 변수와 연산자.md
@@ -1,7 +1,3 @@
-
-
-
-
 ### <제 3장> 변수와 연산자
 
 - 변수란?
@@ -123,10 +119,10 @@
     	scanf("%d", &val);
         return0;
     }
-``````
-    
-- 데이터의 종류에 맞게 메모리 공간 할당
-  
+    ``````
+
+ 데이터의 종류에 맞게 메모리 공간 할당
+
 - val 이름의 변수 선언
   
 - scanf 함수 호출, 두번쨰 전달인자로 val을 넘겨줌
@@ -145,8 +141,8 @@
 
   - 문제1
 
-    ```c
-    #include<stdio.h>
+``````c
+#include<stdio.h>
     
     int main(void){
     	int val1, val2;
@@ -156,10 +152,10 @@
     	
     	printf("뺄셈 결과 : %d-%d = %d", val1, val2, val1-val2);
     	printf("곱셈 결과 : %dX%d = %d", val1, val2, val1*val2);
-        return0;
+        return 0;
     }
-  ```
-  
+```
+
 - 문제2
   
     ```c
