--- a/14장. 포인터와 함수에 대한 이해.md
+++ b/14장. 포인터와 함수에 대한 이해.md
@@ -147,3 +147,61 @@ h3. Call-by-Value와 Call-by-Reference
   * 문자열은 왜 &를 붙이지 않는가?
     * 문자열 : 배열
     * 문자열의 이름 : 배열의 이름 => 즉, 배열의 주소 포인터 그 자체!
+
+
+
+h3. 포인터와 const 키워드
+
+
+
+* const 키워드?
+
+  > 상수를 만들 때 사용!
+  >
+  > 포인터 선언 시 사용 : 포인터를 상수화
+  >
+  > 1. 포인터 자체를 상수화 한다.
+  > 2. 포인터가 가리키는 변수를 상수화한다.
+  > 3. **const 위치에 주의해야함**
+
+* 1. 포인터가 가리키는 변수의 상수화
+
+* ```c
+  /*const 키워드를 사용하여 변수 value의 값을 상수화 하는 코드 예시 부분*/
+  int value = 10;
+  const int* pointer = &value;
+  /*위와 같은 변수와 포인터를 예시로 들어 설명하고자 하였을 때, */
+  
+  *pointer = 30; /*포인터를 이용한 변수 값 변경 불가*/
+  value = 30; /*변수 자체의 값 변경은 가능!*/
+  ```
+
+* 포인터가 가리키는 변수가 상수화(X)
+
+* 포인터를 이용해 포인터가 가리키는 변수의 값을 변경하는 것을 막는 것(O)
+
+* 2. 포인터 상수화
+
+* ```c
+  /*const 키워드를 사용하여 포인터를 상수화 하는 코드 예시 부분*/
+  int value = 1;
+  int value2 = 2;
+  int* const pointer = &value;
+  /*위와 같은 변수와 포인터를 예시로 들어 설명하고자 하였을 때, */
+  
+  *pointer = 30; /*포인터를 이용해 할당된 변수 값 변경 가능*/
+  
+  pointer = &value2; /*포인터에 다른 변수에 대한 주소 할당이 불가능!*/
+  ```
+
+* 포인터가 지니는 주소값의 변경이 불가능해진다.
+
+* 포인터&포인터가 가리키는 데이터 상수화를 동시에 진행하려면?!
+
+* ```c
+  /*위의 조건을 만족시키기 위해 const 키워드의 사용방법을 명시하는 코드 예시 부분*/
+  int value = 10;
+  const int* const pointer = &value;
+  ```
+
+* `const` 키워드의 사용은 협업 프로그래밍 시 의도치 않은 값의 변경을 막아주는 역할을 한다.
